<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--PAGINA INICIAL-->
    <string name="app_name">TP-Smart</string>
    <string name="title">Welcome to TP-Smart</string>
    <string name="activarServicio">Press the button "Activate Service" and activate the TP-Smart service to begin monitoring social media usage.</string>
    <string name="activarServicioGps">Press the button "Activate Gps" to go to turn on the gps.</string>
    <string name="butonActivar">Activete Service</string>
    <string name="butonActivarGps">Activete GPS</string>
    <string name="userID">User Id: </string>
    <string name="ultimoEnvio">Last send was: </string>


    <!--CONFIGURACINES-->
    <string name="change_lenguage">Change language</string>
    <string name="Edit_questionary">Edit questionary</string>

    <!--CUESTIONARIO-->
    <string name="Button">Submit</string>
    <string name="question1">1. Gender:</string>
    <string name="question11">Male</string>
    <string name="question12">Female</string>
    <string name="question13">Other (specify):</string>
    <string name="question2">2. Age:</string>
    <string name="question3">3.	Highest educational level achieved:</string>
    <string name="question31">High school or below</string>
    <string name="question30">Associate degree</string>
    <string name="question32">Bachelor</string>
    <string name="question33">Master</string>
    <string name="question34">Doctorate</string>
    <string name="question35">Post-doctorate</string>
    <string name="question4">4.	Occupation (Check all that apply): </string>
    <string name="question41">Salaried employed</string>
    <string name="question42">Self-employed</string>
    <string name="question43">Unemployed</string>
    <string name="question44">Student</string>
    <string name="question5">5. Weekly hours of work (If you did not indicate that you currently have a job, go to the next question</string>
    <string name="question50">Unemployed (0 hours)</string>
    <string name="question52">Full-time (30 or more hours)</string>
    <string name="question51">Part-time (29 hours or less)</string>
    <string name="question6">6. Country</string>
    <string name="question61">Grecia</string>
    <string name="question62">Puerto Rico</string>
    <string name="question7">7. Enter the user ID assigned</string>
    <string name="Errorquesiton1">Please answer the question </string>
    <string name="Errorquesiton2">Question 2: Enter an age between 18 and 70</string>
    <string name="Errorquesiton4">Please answer the question 4</string>
    <string name="Errorquesiton7">Question 7: Enter your assigned user ID</string>
    <string name="hint1">Specify</string>
    <string name="hint2">Age</string>
    <string name="hint7">User ID</string>
    <string name="botonEnviar">Submit</string>
    <string name="serverProblem">At the moment there are problems with the server. Contact the administrator</string>


    <!--PRUEBA DE PERSEPCION-->
    <string name="startTest">Start the test</string>
    <string name="instriction">Then you will be presented with an image to estimate the time the image lasts on the screen.
        To start press the button "Start the test"</string>
    <string name="instriction1">How long did it last?</string>
    <string name="Save">Save</string>
    <string name="respuesta1">0.4 Seconds</string>
    <string name="respuesta2">0.5 Seconds</string>
    <string name="respuesta3">1   Seconds</string>
    <string name="respuesta4">2   Seconds</string>
    <string name="respuesta5">5   Seconds</string>
    <string name="respuesta6">6   Seconds</string>

    <!--Cuestionario final-->
    <string name="question8">1. Where do you commonly use the cellphone? (Check all that apply)</string>
    <string name="question81">House</string>
    <string name="question82">Car</string>
    <string name="question83">Work</string>
    <string name="question84">University</string>
    <string name="question85">Bathroom</string>
    <string name="question86">Waiting room (Doctor’s office, government agency)</string>
    <string name="question87">Other</string>
    <string name="question9">2. When do you commonly use the cellphone? (Check all that apply)</string>
    <string name="question91">While waiting</string>
    <string name="question92">While eating</string>
    <string name="question93">While spending time with friends and family</string>
    <string name="question94">While studying</string>
    <string name="question95">While driving</string>
    <string name="question96">While watching television</string>
    <string name="question97">While listening to radio</string>
    <string name="quesiton10">3. How do you access the internet from your cellphone?</string>
    <string name="quesiton101">Data plan</string>
    <string name="quesiton102">Wireless internet (Wi-Fi)</string>
    <string name="quesiton103">I don’t know</string>
    <string name="quesiton104">Data plan and Wireless internet (Wi-Fi)</string>
    <string name="quesiton11">4. Which 2 apps do you use most on your cellphone?</string>
    <string name="quesiton111">Facebook</string>
    <string name="quesiton112">Twitter</string>
    <string name="quesiton113">Instagram</string>
    <string name="quesiton114">Facebook Messenger</string>
    <string name="quesiton115">Whatsapp</string>
    <string name="quesiton116">Snapchat</string>
    <string name="quesiton117">Email</string>
    <string name="quesiton118">Games</string>
    <string name="quesiton12">5. When do you use your cellphone the most?</string>
    <string name="quesiton121">Morning</string>
    <string name="quesiton122">Afternoon</string>
    <string name="quesiton123">Evening</string>
    <string name="quesiton13">5. How many hours per day do you spend using Facebook on your cellphone?</string>
    <string name="quesiton131">Hour</string>
    <string name="quesiton132">Minute</string>
    <string name="quesiton14">6. How many hours per day do you spend using Twitter on your cellphone?</string>
    <string name="quesiton15">7. How many hours per day do you spend using Instagram on your cellphone?</string>
    <string name="quesiton16">8. How many hours per day do you spend using Whatsapp on your cellphone?</string>
    <string name="quesiton17">9. Would you be interested in participating in an in-depth interview?</string>
    <string name="quesiton171">Yes</string>

    <!--finalpage-->
    <string name="finalMessage">Thanks for complete the test for the day </string>
    <string name="fintest">End of the test, thanks for participating.</string>

    <!--Tecnical Support-->
    <string name="tecnicalSupport">If you have any problems, contact: ...</string>

    <!--Notificaciones-->
    <string name="titulo1">Time Perception Test </string>
    <string name="mensaje1">Press to access the test of the day </string>

    <string name="titulo2">Final Questionnaire</string>
    <string name="mensaje2">Pleas complete the following questionnaire.</string>

    <string name="titulo3">Unistall TP-Smart</string>
    <string name="mensaje3">We have already received your last questionnaire, thanks for participated.</string>

</resources>
