<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/initialLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <TextView
            android:id="@+id/error1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />



        <RadioGroup
            android:id="@+id/radioGroup01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton1-0"
                android:text="@string/question1"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton1-2"
                android:text="@string/question12" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton1-3"
                android:text="@string/question13" />

            <EditText
                android:id="@+id/question01Other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="specify" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/radioGroup02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/radioGroup"
                android:layout_marginTop="8dp"
                android:id="@+id/quesiton2-0"
                android:text="@string/question2"
                android:textSize="20dp"
                android:layout_alignParentLeft="true" />

            <EditText
                android:id="@+id/question02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="Age"
                android:inputType="number" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton3-0"
                android:text="@string/question3"
                android:textSize="20dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton3-1"
                android:text="@string/question31" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton3-2"
                android:text="@string/question32" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton3-3"
                android:text="@string/question33" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton3-4"
                android:text="@string/question34" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton3-5"
                android:text="@string/question35" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quesiton4-0"
                android:text="@string/question4"
                android:textSize="20dp"/>

            <CheckBox
                android:id="@+id/question4-1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question41"/>
            <CheckBox
                android:id="@+id/question4-2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question42"/>
            <CheckBox
                android:id="@+id/question4-3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question43"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question4-4"
                android:text="@string/question44"/>


        </RadioGroup>



            <RadioGroup
                android:id="@+id/radioGroup05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quesiton5-0"
                    android:text="@string/question5"
                    android:textSize="20dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quesiton5-1"
                    android:text="@string/question51" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quesiton5-2"
                    android:text="@string/question52" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/radioGroup06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:id="@+id/quesiton6-0"
                    android:text="@string/question6"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quesiton6-1"
                    android:text="@string/question61" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quesiton6-2"
                    android:text="@string/question62" />
            </RadioGroup>

        <LinearLayout
            android:id="@+id/radioGroup07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quesiton7-0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/radioGroup"
                android:layout_marginTop="8dp"
                android:text="@string/question7"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/question07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="UserID"
                android:inputType="number" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sbumitButtonQuestionnaire"
                android:text="Submit"
                android:layout_gravity="left"
                android:onClick="SaveQuestionnaire"/>




        </LinearLayout>

        </LinearLayout>


    </ScrollView>



